fix ie visibility issue

--- a/client/app/weather/weather.component.scss
+++ b/client/app/weather/weather.component.scss
@@ -65,13 +65,14 @@ $blur-factor: 0.5rem;
 }
 
 .show-loading {
-  animation: 0.5s ease-out 0s 1 semi-fade-in, 2s ease-out 0s 1 hide-anim;
+  animation: 0.5s ease-out 0s 1 semi-fade-in;
   opacity: 0.7;
   transition: opacity 1s ease-in-out 0s;
 }
 
 .hide-loading {
   opacity: 0;
+  animation: 2s ease-out 0s 1 hide-anim;
   transition: opacity 1s ease-in-out 0s;
 }
 
